--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -505,7 +505,7 @@ QGroupBox::title {
              <string>&amp;Save Changes</string>
             </property>
             <property name="default">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
